--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
+        "predis/predis": "^1.1",
         "zhouxiaoshuai/hasher": "^1.0"
     },
     "require-dev": {
@@ -56,8 +57,7 @@
         ],
         "post-update-cmd": [
             "php artisan clear-compiled",
-            "php artisan ide-helper:generate",
-            "php artisan optimize"
+            "php artisan ide-helper:generate"
         ]
     },
     "config": {
